# korpsearch

./: .gitignore  Cargo.toml  README.md  build_indexes.py  pyproject.toml  search_cmdline.py  search_fastapi.py
crates/build-indexes/: Cargo.toml
crates/build-indexes/src/: main.rs  options.rs
crates/korpsearch/: Cargo.toml
crates/korpsearch/src/: corpus.rs  corpus_reader.rs  index.rs  lib.rs
crates/korpsearch/src/shared/: feature.rs
crates/search-cmdline/: Cargo.toml
crates/search-webserver/: Cargo.toml
experimental/: elias_coding.py
korpsearch-fast-merge/: pyproject.toml
src/korpsearch/: __init__.py  corpus.py  corpus_reader.py  disk.py  index.py  index_builder.py  indexset.py  query.py  search.py  sort.py
tests/: corpus_test.py  test_conllu_reader.py
