[workspace]
resolver = "3"
members = [
    "crates/build-indexes",
    "crates/korpsearch",
    "crates/search-cmdline",
    "crates/search-webserver",
]

[workspace.dependencies]
# local crate
korpsearch = { path = "crates/korpsearch" }

# external crates
clap = "4.5.32"
env_logger = "0.11.7"
log = "0.4.26"
miette = "7.5.0"
