[project]
name = "korpsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
fast-merge = [
    "korpsearch-fast-merge",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["korpsearch-fast-merge"]

[tool.uv.sources]
korpsearch-fast-merge = { workspace = true }
