[project]
name = "korpsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
fast-merge = [
    "korpsearch-fast-merge",
]
server = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["korpsearch-fast-merge"]

[tool.uv.sources]
korpsearch-fast-merge = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
