[project]
name = "korpsearch-fast-merge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=74.1", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
    {name = "fast_merge", sources =["src/korpsearch_fast_merge/fast_merge.pyx"]},
]
